macros: do the Linux check correctly

It should be '#ifdef', not '#ifndef'. This commit also fixes a return
type error in the function.

https://bugzilla.gnome.org/show_bug.cgi?id=791922